# choralebricks

./: .buildinfo  .gitignore  Dockerfile  LICENSE  LICENSE.md  README.md  chord.html  constants.html  dataset.html  docker-compose.yml  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  utils.html
.github/workflows/: python-package.yml
_sources/: constants.rst.txt  dataset.rst.txt
choralebricks/: __init__.py  chord.py  constants.py  dataset.py  enums.py  generators.py  harte.lark  utils.py
docs/source/: chord.rst  conf.py  index.rst  utils.rst
examples/: dataset_statistics.py  display_annotations.py  display_piano_roll.py  generate_mix.py  generate_mix_permutations.py  generate_mix_random.py  mux_videos.py  track_generator.py  visualize_f0_12tet_ji.py
scripts/: convert_f0.py  metadata_collection.py  naive_alignment.py
tests/: conftest.py  test_chord.py  test_data.py  test_dataset.py  test_peter.py
thirdPartyLegalNotices/: attributions.txt
