[tool.poetry]
name = "choralebricks"
version = "0.1.0"
description = "Supporting package for the ChoraleBricks dataset."
authors = ["Stefan Balke <stefan.balke@audiolabs-erlangen.de>"]

[tool.poetry.dependencies]
python = ">=3.10"  # Specify the compatible Python version
numpy = ">=1.18.0"
scipy = ">=1.4.0"
soundfile = "*"
pydantic = "*"
pandas = "^2.2.3"
matplotlib = {version = "*", optional = true}

[tool.poetry.extras]
examples = ["matplotlib"]

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=choralebricks --cov-report=term-missing"
python_files = ["test_*.py", "*_test.py"]

[tool.black]
line-length = 120  # Default is 88, but you can set this to your preferred length
target-version = ["py39"]  # Set the Python version(s) you're targeting
skip-string-normalization = true  # Optional: keep original quote styles
include = '\.pyi?$'  # Only format .py and .pyi files
